--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,6 +26,10 @@
             android:id="@+id/action_HomeFragment_to_BasicSmileLivenessFragment"
             app:destination="@id/BasicSmileLivenessFragment" />
 
+        <action
+            android:id="@+id/action_HomeFragment_to_FaceMatcherFragment"
+            app:destination="@id/FaceMatcherFragment" />
+
     </fragment>
 
     <fragment
@@ -132,5 +136,11 @@
         android:name="com.innovatrics.dot.samples.smileliveness.SmileLivenessResultFragment"
         android:label="@string/navigation_destination_smile_liveness"
         tools:layout="@layout/fragment_smile_liveness_result" />
+
+    <fragment
+        android:id="@+id/FaceMatcherFragment"
+        android:name="com.innovatrics.dot.samples.facematcher.FaceMatcherFragment"
+        android:label="@string/navigation_destination_face_matcher"
+        tools:layout="@layout/fragment_face_matcher" />
 
 </navigation>
