--- a/app/src/main/res/layout/fragment_document_auto_capture_result.xml
+++ b/app/src/main/res/layout/fragment_document_auto_capture_result.xml
@@ -18,7 +18,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/text"
