--- a/app/src/main/res/layout/fragment_magnifeye_liveness_result.xml
+++ b/app/src/main/res/layout/fragment_magnifeye_liveness_result.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nfcreading.NfcReadingResultFragment">
+    tools:context=".magnifeyeliveness.MagnifEyeLivenessResultFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,14 +22,13 @@
             tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:text="@string/sample_magnifeye_liveness_summary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image"
-            tools:text="Text" />
+            app:layout_constraintTop_toBottomOf="@+id/image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
