--- a/app/src/main/res/layout/fragment_smile_liveness_result.xml
+++ b/app/src/main/res/layout/fragment_smile_liveness_result.xml
@@ -11,23 +11,12 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/neutral_expression_image"
+            android:id="@+id/image"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/smile_expression_image"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription"
-            tools:src="@tools:sample/avatars" />
-
-        <ImageView
-            android:id="@+id/smile_expression_image"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            app:layout_constraintLeft_toRightOf="@+id/neutral_expression_image"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription"
             tools:src="@tools:sample/avatars" />
@@ -39,7 +28,7 @@
             android:text="@string/sample_smile_liveness_summary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/neutral_expression_image" />
+            app:layout_constraintTop_toBottomOf="@+id/image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
