--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,6 +30,10 @@
             android:id="@+id/action_HomeFragment_to_BasicMagnifEyeLivenessFragment"
             app:destination="@id/BasicMagnifEyeLivenessFragment" />
 
+        <action
+            android:id="@+id/action_HomeFragment_to_BasicPalmAutoCaptureFragment"
+            app:destination="@id/BasicPalmAutoCaptureFragment" />
+
     </fragment>
 
     <fragment
@@ -81,6 +85,25 @@
             app:popUpTo="@id/HomeFragment" />
 
     </fragment>
+
+    <fragment
+        android:id="@+id/BasicPalmAutoCaptureFragment"
+        android:name="com.innovatrics.dot.samples.palmautocapture.BasicPalmAutoCaptureFragment"
+        android:label="@string/navigation_destination_palm_auto_capture"
+        tools:layout="@layout/dot_palm_fragment_palm_auto_capture">
+
+        <action
+            android:id="@+id/action_BasicPalmAutoCaptureFragment_to_PalmAutoCaptureResultFragment"
+            app:destination="@id/PalmAutoCaptureResultFragment"
+            app:popUpTo="@id/HomeFragment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/PalmAutoCaptureResultFragment"
+        android:name="com.innovatrics.dot.samples.palmautocapture.PalmAutoCaptureResultFragment"
+        android:label="@string/navigation_destination_palm_auto_capture"
+        tools:layout="@layout/fragment_palm_auto_capture_result" />
 
     <fragment
         android:id="@+id/NfcReadingResultFragment"
