--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="Theme.DotSdkSamples" parent="Base.Theme.DotSdkSamples">
         <item name="android:navigationBarColor">@android:color/transparent</item>
