--- a/app/src/main/res/layout/fragment_nfc_reading.xml
+++ b/app/src/main/res/layout/fragment_nfc_reading.xml
@@ -14,14 +14,14 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/button_cancel"
+            app:layout_constraintBottom_toTopOf="@id/cancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout="@layout/dot_nfc_fragment_nfc_travel_document_reader" />
 
         <Button
-            android:id="@+id/button_cancel"
+            android:id="@+id/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
